[package]
name = "smt2model"
version = "0.1.0"
repository = "https://github.com/facebookincubator/smt2utils"
authors = ["Mathieu Baudet <mathieubaudet@fb.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["smt2", "ml"]
categories = ["solver", "research"]
edition = "2018"

[dependencies]
anyhow = "1.0.38"
thiserror = "1.0.25"
once_cell = "1.7.2"
structopt = "0.3.12"
flate2 = "1.0.2"
tar = "0.4.33"
tempfile = "3.2.0"
libc = "0.2.93"
rand = { version = "0.8.3", features = ["small_rng"] }
signal-hook = "0.3.8"
petgraph = "0.5.1"

smt2parser = { version = "0.6.1", path = "../smt2parser" }
