[package]
name = "smt2parser"
version = "0.4.0"
description = "Generic parser library for the SMT-LIB-2 format"
repository = "https://github.com/facebookincubator/smt2utils"
documentation = "https://docs.rs/smt2parser"
authors = ["Mathieu Baudet <mathieubaudet@fb.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["smt", "solver", "smt-lib"]
categories = ["science"]
edition = "2018"
exclude = [
    # Readme template that doesn't need to be included.
    "README.tpl",
]

[dependencies]
num = { version = "0.3.1", features = ["serde"] }
pomelo = "0.1.5"
structopt = "0.3.12"
fst = "0.4.5"
serde = { version = "1.0.125", features = ["derive"] }

[[bin]]
name = "smt2bin"
path = "src/main.rs"
test = false
