[package]
name = "smt2proxy"
version = "0.1.0"
repository = "https://github.com/fairinternal/smt2analysis"
authors = ["Mathieu Baudet <mathieubaudet@fb.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["smt2", "ml"]
categories = ["solver", "research"]
edition = "2018"

[dependencies]
rand = "0.8.0"
structopt = "0.3.12"
smt2parser = { path = "../smt2parser", version = "0.1.0" }

[[bin]]
name = "smt2proxy"
path = "src/main.rs"
test = false
