[package]
name = "smt2proxy"
version = "0.2.4"
description = "Binary tool to intercept and pre-process SMT2 commands"
repository = "https://github.com/facebookincubator/smt2utils"
documentation = "https://docs.rs/smt2proxy"
authors = ["Mathieu Baudet <mathieubaudet@fb.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["smt", "solver", "smt-lib"]
categories = ["science"]
edition = "2018"
exclude = [
    # Readme template that doesn't need to be included.
    "README.tpl",
]

[dependencies]
rand = "0.8.0"
structopt = "0.3.12"
smt2parser = { path = "../smt2parser", version = "0.6.1" }
strum = { version = "0.21" }

[[bin]]
name = "smt2proxy"
path = "src/main.rs"
test = false
