[package]
name = "z3tracer"
version = "0.11.2"
description = "Parser for Z3 tracing logs"
repository = "https://github.com/facebookincubator/smt2utils"
documentation = "https://docs.rs/z3tracer"
authors = ["Mathieu Baudet <mathieubaudet@fb.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["smt", "solver", "z3"]
categories = ["science"]
edition = "2018"
exclude = [
    # Readme template that doesn't need to be included.
    "README.tpl",
]

[dependencies]
structopt = "0.3.12"
smt2parser = { path = "../smt2parser", version = "0.6.1" }
thiserror = "1.0.24"
once_cell = "1.7.2"

plotters = { version = "0.3.0", optional = true }
petgraph = { version = "0.5.1", optional = true }
multiset = { version = "0.0.5", optional = true }

[features]
report = ["plotters", "petgraph", "multiset"]

[dev-dependencies]
anyhow = "1.0.40"

[[bin]]
name = "z3tracer"
path = "src/main.rs"
required-features = ["report"]
test = false
